fix(order): harden OrderEventStore (Page pagination, stable ordering, ServiceException, idempotent append)